Continue work on file manager, make progress on file delete via api
